[gd_scene load_steps=33 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://animations/run/shapshall_walking-1.png" type="Texture" id=2]
[ext_resource path="res://animations/run/shapshall_walking-2.png" type="Texture" id=3]
[ext_resource path="res://animations/run/shapshall_walking-3.png" type="Texture" id=4]
[ext_resource path="res://animations/run/shapshall_walking-4.png" type="Texture" id=5]
[ext_resource path="res://animations/run/shapshall_walking-5.png" type="Texture" id=6]
[ext_resource path="res://animations/left/shapshall_run_left-1.png" type="Texture" id=7]
[ext_resource path="res://animations/left/shapshall_run_left-2.png" type="Texture" id=8]
[ext_resource path="res://animations/left/shapshall_run_left-3.png" type="Texture" id=9]
[ext_resource path="res://animations/left/shapshall_run_left-4.png" type="Texture" id=10]
[ext_resource path="res://animations/left/shapshall_run_left-5.png" type="Texture" id=11]
[ext_resource path="res://animations/right/shapshall_run_right-1.png" type="Texture" id=12]
[ext_resource path="res://animations/right/shapshall_run_right-2.png" type="Texture" id=13]
[ext_resource path="res://animations/right/shapshall_run_right-3.png" type="Texture" id=14]
[ext_resource path="res://animations/right/shapshall_run_right-4.png" type="Texture" id=15]
[ext_resource path="res://animations/right/shapshall_run_right-5.png" type="Texture" id=16]
[ext_resource path="res://animations/skip/shapshall-skip-1.png" type="Texture" id=17]
[ext_resource path="res://animations/skip/shapshall-skip-2.png" type="Texture" id=18]
[ext_resource path="res://animations/skip/shapshall-skip-3.png" type="Texture" id=19]
[ext_resource path="res://animations/skip/shapshall-skip-4.png" type="Texture" id=20]
[ext_resource path="res://animations/skip/shapshall-skip-5.png" type="Texture" id=21]
[ext_resource path="res://animations/skip/shapshall-skip-6.png" type="Texture" id=22]
[ext_resource path="res://animations/skip/shapshall-skip-7.png" type="Texture" id=23]
[ext_resource path="res://animations/skip/shapshall-skip-8.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walking",
"speed": 60.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.06339
height = 17.1218

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "left",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1252.17, 266.931 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "right",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16.8766, 12.4694 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "skip",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 13.9709, 5.78989 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 7.66677, 46.9833 )
scale = Vector2( 1.08405, 1 )
script = ExtResource( 1 )

[node name="WalkingAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 126.886, 45.2666 )
scale = Vector2( 0.0943962, 0.11347 )
frames = SubResource( 1 )
animation = "walking"
frame = 4
speed_scale = 0.2
playing = true

[node name="WalkingCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 122.778, 50.7836 )
rotation = -0.000654697
scale = Vector2( 1.00126, 1.23292 )
shape = SubResource( 2 )

[node name="LeftAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 123.583, 47.9247 )
scale = Vector2( 0.0924121, 0.0895091 )
frames = SubResource( 3 )
animation = "left"
frame = 1
speed_scale = 0.2
playing = true

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 121.626, 52.545 )
scale = Vector2( 0.00798813, 0.0484504 )
shape = SubResource( 9 )

[node name="RightAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 125.411, 51.596 )
scale = Vector2( 0.0767283, 0.078841 )
frames = SubResource( 5 )
animation = "right"
frame = 3
speed_scale = 0.2
playing = true

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 124.416, 55.0781 )
scale = Vector2( -0.62263, 0.983541 )
shape = SubResource( 11 )

[node name="SkipAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 122.878, 47.063 )
scale = Vector2( 0.0798893, 0.109711 )
frames = SubResource( 7 )
animation = "skip"
frame = 6
speed_scale = 0.2
playing = true

[node name="SkipCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 122.378, 47.1632 )
scale = Vector2( -0.352837, 2.73951 )
shape = SubResource( 10 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 132.554, 49.4799 )
